--- a/my_gym/src/.env
+++ b/my_gym/src/.env
@@ -1,1 +1,2 @@
-REACT_APP_RAPID_API_KEY = e204058d2cmshcf547a262e5524ep1379d2jsnce80ee597d81
+REACT_APP_RAPID_API_KEY=f81d5c7777msh2d926f7bd8e2c22p1af665jsn76a239cf9aaa
+ESLINT_NO_DEV_ERRORS=true
